--- a/produtos.html
+++ b/produtos.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MakeUp Studio - Produtos</title>
-    <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
     <header>
@@ -26,105 +25,36 @@
     </header>
 
     <div class="content">
-        <section class="products">
-            <div class="product">
-                <img class="product-image" src="img/gloss kiko.webp" alt="Gloss Kiko">
-                <div class="product-info">
-                    <p class="product-info-name">Gloss Kiko</p>
-                    <p class="product-info-price">R$89,99</p>
-                    <button class="product-info-button">Adicionar ao carrinho</button>
-                </div>
-            </div>
-
-            <div class="product">
-                <img class="product-image" src="img/base kiko.webp" alt="Base Liquida Kiko">
-                <div class="product-info">
-                    <p class="product-info-name">Base Liquida Kiko</p>
-                    <p class="product-info-price">R$195,50</p>
-                    <button class="product-info-button">Adicionar ao carrinho</button>
-                </div>
-            </div>
-
-            <div class="product">
-                <img class="product-image" src="img/rimel kiko.webp" alt="Máscara de Cílios Kiko">
-                <div class="product-info">
-                    <p class="product-info-name">Máscara de Cílios Kiko</p>
-                    <p class="product-info-price">R$77,92</p>
-                    <button class="product-info-button">Adicionar ao carrinho</button>
-                </div>
-            </div>
-
-            <div class="product">
-                <img class="product-image" src="img/fixador.webp" alt="Spray Fixador Kiko">
-                <div class="product-info">
-                    <p class="product-info-name">Spray Fixador Kiko</p>
-                    <p class="product-info-price">R$65,93</p>
-                    <button class="product-info-button">Adicionar ao carrinho</button>
-                </div>
-            </div>
-
-            <!-- Novos produtos adicionados -->
-            <div class="product">
-                <img class="product-image" src="img/batom.webp"Batom MAC">
-                <div class="product-info">
-                    <p class="product-info-name">Batom MAC</p>
-                    <p class="product-info-price">R$139,90</p>
-                    <button class="product-info-button">Adicionar ao carrinho</button>
-                </div>
-            </div>
-
-            <div class="product">
-                <img class="product-image" src="img/base kiko.webp" alt="Blush Benefit">
-                <div class="product-info">
-                    <p class="product-info-name">Blush Benefit</p>
-                    <p class="product-info-price">R$139,00</p>
-                    <button class="product-info-button">Adicionar ao carrinho</button>
-                </div>
-            </div>
-
-            <div class="product">
-                <img class="product-image" src="img/paleta.jpg" alt="Paleta Naked Urban Decay">
-                <div class="product-info">
-                    <p class="product-info-name">Paleta Naked Urban Decay</p>
-                    <p class="product-info-price">R$399,90</p>
-                    <button class="product-info-button">Adicionar ao carrinho</button>
-                </div>
-            </div>
-
-            <div class="product">
-                <img class="product-image" src="img/pinceis.png" alt="Pincel Real Techniques">
-                <div class="product-info">
-                    <p class="product-info-name">Pinceis Real Techniques</p>
-                    <p class="product-info-price">350,90</p>
-                    <button class="product-info-button">Adicionar ao carrinho</button>
-                </div>
-            </div>
-
-            <div class="product">
-                <img class="product-image" src="img/delineador.webp" alt="Delineador Azul">
-                <div class="product-info">
-                    <p class="product-info-name">Delineador Kiko azul</p>
-                    <p class="product-info-price">R$159,90</p>
-                    <button class="product-info-button">Adicionar ao carrinho</button>
-                </div>
-            </div>
+        <section class="products" id="products-container">
+            <!-- Os produtos da API serão inseridos aqui -->
         </section>
+    </div>
 
     <script>
-        // header menu script
-        const header_menu_button = document.querySelector(".header-menu");
-        const menu_sections = document.querySelector(".menu-section");
-        header_menu_button.addEventListener("click", () => {
-            menu_sections.classList.toggle("on");
-            if(menu_sections.classList.contains("on")){
-                document.querySelector("body").classList.add("disable-scroll");
-            } else {
-                document.querySelector("body").classList.remove("disable-scroll");
-            }
-        });
+    document.addEventListener("DOMContentLoaded", async () => {
+        const container = document.getElementById("products-container");
+        try {
+            const response = await fetch("https://studiomakebackend.onrender.com/api/produtos");
+            const produtos = await response.json();
+
+            produtos.forEach(produto => {
+                const card = document.createElement("div");
+                card.className = "product";
+                card.innerHTML = `
+                    <img class="product-image" src="${produto.imagem}" alt="${produto.nome}">
+                    <div class="product-info">
+                        <p class="product-info-name">${produto.nome}</p>
+                        <p class="product-info-price">R$${produto.preco.toFixed(2)}</p>
+                        <button class="product-info-button">Adicionar ao carrinho</button>
+                    </div>
+                `;
+                container.appendChild(card);
+            });
+        } catch (error) {
+            console.error("Erro ao carregar produtos:", error);
+            container.innerHTML = "<p>Erro ao carregar produtos.</p>";
+        }
+    });
     </script>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
-
