melhorando css produtos

--- a/produtos.html
+++ b/produtos.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MakeUp Studio - Produtos</title>
     <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/styles/produtos.css">
+
 </head>
 <body>
     <header>
@@ -16,7 +18,7 @@
                 <ion-icon class="header-menu-close" name="close"></ion-icon>
             </div>
             <ul class="buttons">
-                <li class="button"><a href="cadastro.html">Cadastro</a></li>
+                <li class="button"><a href="/">Inicio</a></li>
                 <li class="button"><a href="produtos.html">Produtos</a></li>
                 <li class="button"><a href="carrinho.html">Carrinho</a></li>
                 <li class="button"><a href="sobrenos.html">Sobre Nós</a></li>
